# trrustt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
branding/: README.md
config/: defaults.toml
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: chains.rs  cost.rs  lib.rs  prompt.rs  providers.rs  rag.rs  rate_limit.rs  router.rs  vision.rs
crates/config-engine/: Cargo.toml  README.md
crates/config-engine/src/: encryption.rs  engine.rs  layers.rs  lib.rs  policy.rs  registry.rs  validation.rs
crates/dashboard-generator/: Cargo.toml
crates/dashboard-generator/src/: binding.rs  layout.rs  lib.rs  planner.rs  theme.rs  tmsl_builder.rs  types.rs  visuals.rs
crates/data-ingestion/: Cargo.toml  README.md
crates/data-ingestion/src/: error.rs  ingestor.rs  lib.rs  model_builder.rs  profiler.rs  sources.rs  types.rs
crates/data-store/: Cargo.toml  README.md
crates/data-store/src/: backup.rs  error.rs  lib.rs  pool.rs  seed.rs
crates/data-store/src/migrations/: mod.rs  v001_initial.rs
crates/data-store/src/models/: mod.rs
crates/data-store/src/repos/: ai_usage_repo.rs  dashboard_repo.rs  measure_repo.rs  mod.rs  org_repo.rs  project_repo.rs  theme_repo.rs  user_repo.rs  workspace_repo.rs
crates/dax-engine/: Cargo.toml
crates/dax-engine/src/: ast.rs  complexity.rs  corrector.rs  explainer.rs  formatter.rs  generator.rs  lib.rs  parser.rs  validator.rs
crates/license-manager/: Cargo.toml
crates/license-manager/src/: cache.rs  features.rs  lib.rs  offline.rs  telemetry.rs  validator.rs
crates/mcp-hub/: Cargo.toml
crates/mcp-hub/src/: client.rs  lib.rs  protocol.rs  resources.rs  server.rs  tools.rs  transport.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: constants.rs  errors.rs  lib.rs  telemetry.rs  types.rs
crates/trrustt/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/trrustt/frontend/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
crates/trrustt/frontend/src/: App.svelte  app.css  vite-env.d.ts
crates/trrustt/src/: app.rs  cli.rs  main.rs  mcp.rs  tui.rs
crates/xmla-client/: Cargo.toml  README.md
crates/xmla-client/src/: client.rs  discover.rs  error.rs  execute.rs  lib.rs  tmsl.rs
docs/: 00-MASTER-PLAN.md
docs/architecture/: 01-component-architecture.md  02-data-flow.md
docs/business/: 01-monetization-model.md  02-go-to-market.md
docs/technical/: 01-configuration-engine.md  02-dax-engine.md  03-testing-packaging-deployment.md  04-internal-database.md  05-policy-backup-seeding.md
