# ═══════════════════════════════════════════════════════════════════════
# TRRUSTT — AI-driven Power BI External Tool
# Workspace Root Manifest
# ═══════════════════════════════════════════════════════════════════════

[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/config-engine",
    "crates/data-store",
    "crates/data-ingestion",
    "crates/xmla-client",
    "crates/dax-engine",
    "crates/ai-engine",
    "crates/dashboard-generator",
    "crates/mcp-hub",
    "crates/license-manager",
    "crates/trrustt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["trRUSTt Developer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/trrustt/builder"
readme = "README.md"
description = "trRUSTt — AI-driven Power BI External Tool. One binary. Infinite dashboards."

[workspace.dependencies]
# ── Async Runtime ──────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Serialization ──────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ── Error Handling ─────────────────────────────────────────────────
thiserror = "2"

# ── Logging & Observability ─────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# ── UUID ───────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# ── Date/Time ──────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── HTTP Client ────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "gzip"], default-features = false }

# ── CLI ────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "env"] }

# ── TUI ────────────────────────────────────────────────────────────
ratatui = "0.29"
crossterm = "0.28"

# ── Config ─────────────────────────────────────────────────────────
figment = { version = "0.10", features = ["toml", "env", "json"] }

# ── Cryptography ───────────────────────────────────────────────────
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"

# ── JWT ────────────────────────────────────────────────────────────
jsonwebtoken = "9"

# ── AI / LLM ───────────────────────────────────────────────────────
async-openai = "0.27"

# ── Parsing ────────────────────────────────────────────────────────
pom = "3"
regex = "1"

# ── Data ───────────────────────────────────────────────────────────
polars = { version = "0.45", features = ["lazy", "json", "parquet"] }
arrow = "53"

# ── Database ───────────────────────────────────────────────────────
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }

# ── Template Engine ────────────────────────────────────────────────
tera = "1"

# ── Image Processing ───────────────────────────────────────────────
base64 = "0.22"
image = "0.25"

# ── Directory Utilities ────────────────────────────────────────────
dirs = "5"

# ── Compression ────────────────────────────────────────────────────
zstd = { version = "0.13", features = ["zstdmt"] }

# ── Tauri ──────────────────────────────────────────────────────────
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde-wasm-bindgen = "0.6"

# ── Testing ────────────────────────────────────────────────────────
proptest = "1"
criterion = "0.5"

# ── Misc ───────────────────────────────────────────────────────────
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# ═══════════════════════════════════════════════════════════════════════
# Release Profile: Maximum optimization for distribution
# ═══════════════════════════════════════════════════════════════════════
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# ═══════════════════════════════════════════════════════════════════════
# Dev Profile: Fast iteration
# ═══════════════════════════════════════════════════════════════════════
[profile.dev]
opt-level = 0
debug = true

# ═══════════════════════════════════════════════════════════════════════
# Test Profile: Optimized for test speed
# ═══════════════════════════════════════════════════════════════════════
[profile.test]
opt-level = 1
debug = true
