[package]
name = "ai-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TRRUSTT AI engine — LLM router, RAG pipeline, vision"

[dependencies]
shared = { path = "../shared" }
config-engine = { path = "../config-engine" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-openai.workspace = true
base64.workspace = true
image.workspace = true
tera.workspace = true
uuid.workspace = true

[lints]
workspace = true
