[package]
name = "dashboard-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TRRUSTT dashboard generator — layout AI, visual TMSL, themes"

[dependencies]
shared = { path = "../shared" }
config-engine = { path = "../config-engine" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
