[package]
name = "data-ingestion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TRRUSTT data ingestion — CSV, SQL, Parquet, JSON → Polars profiler → Tabular model builder"

[dependencies]
shared = { path = "../shared" }
config-engine = { path = "../config-engine" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
polars.workspace = true
arrow.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
