# ═══════════════════════════════════════════════════════════════════════
# TRRUSTT — Data Store Crate
#
# Internal database: SQLite (via sqlx, compile-time checked, NO ORM)
# + LanceDB for vector embeddings (RAG).
# ═══════════════════════════════════════════════════════════════════════

[package]
name = "data-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TRRUSTT data store — SQLite via sqlx + LanceDB for vectors"

[dependencies]
# ── Workspace ────────────────────────────────────────────────────────
shared = { path = "../shared" }
config-engine = { path = "../config-engine" }

# ── Database ─────────────────────────────────────────────────────────
sqlx.workspace = true

# ── Serialization ────────────────────────────────────────────────────
serde.workspace = true
serde_json.workspace = true

# ── Error Handling ───────────────────────────────────────────────────
thiserror.workspace = true

# ── Async Runtime ────────────────────────────────────────────────────
tokio = { workspace = true, features = ["fs", "sync", "macros"] }

# ── UUID ─────────────────────────────────────────────────────────────
uuid.workspace = true

# ── Date/Time ────────────────────────────────────────────────────────
chrono.workspace = true

# ── Logging ──────────────────────────────────────────────────────────
tracing.workspace = true

# ── Compression ──────────────────────────────────────────────────────
zstd.workspace = true

# ── Cryptography ─────────────────────────────────────────────────────
sha2.workspace = true

# ── Misc ─────────────────────────────────────────────────────────────
base64.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
