[package]
name = "license-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TRRUSTT license manager — JWT validation, offline grace, feature flags"

[dependencies]
shared = { path = "../shared" }
config-engine = { path = "../config-engine" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true

[lints]
workspace = true
